# py-portal

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  arm-img.sh  bpi.sh  build.sh  core  docker.sh  pi-img.sh  spa.sh
cpp/: async_file_streamer.h  bt_mgr.cpp  bt_mgr.h  common.cpp  common.h  db.cpp  db.h  ffmpeg.cpp  ffmpeg.h  http_home.cpp  http_home.h  http_svr.cpp  http_svr.h  main.cpp  socks5.cpp  socks5.h  util.cpp  util.h  ws_svr.cpp  ws_svr.h
hooks/: build
pi-dist/: Dockerfile  sources.list
pi-dist/conf/: minidlna.conf  settings.json
pi-dist/pre_inst/usr/lib/arm-linux-gnueabihf/: libfdk-aac.so.1.0.1  libsystemd.so.0.28.0  libvorbisenc.so.2.0.11  libx265.so.179
pi-dist/prefab/: better-sqlite3.7z  sqlite3.7z
pi-dist/prefab/home/: app.js
pi-dist/www/: api.txt  index.html
pi-dist/www/css/: chunk-42269c3e.9c0d03b4.css  help-en.e89109c0.css  help.94116199.css  index.d1fd267f.css  index.eb5daf00.css
pi-dist/www/js/: chunk-42269c3e.cc8ac19d.js  chunk-vendors.579b0725.js  help-en.8ab21776.js  help.500838c8.js  index.b411ecbe.js  index.d448d8b6.js  index.efdc7e0c.js
prefab/: sqlite3.7z
spa/: package-lock.json  package.json  vue.config.js
spa/public/: app.js  index.html
spa/src/: App.vue  db.js  main.js  router.js  store.js  ws.js
spa/src/common/: busi.js  util.js
spa/src/locales/: en.json  zh.json
spa/src/views/: Help.vue  Help_en.vue  Outer.vue  Sss.vue  Store.vue  UpHome.vue  Upload.vue
spa/src/views/fs/: All.vue  Audio.vue  Folder.vue  Image.vue  MultiSel.vue  Video.vue
